added all subsets for manapouri

--- a/rmssd_1931.html
+++ b/rmssd_1931.html
@@ -359,11 +359,15 @@ display: none;
 
 
 <pre class="r"><code># Load in WVs from full run (91 years + mean joiner)
+# # Run 0020 - 1931-2023 + joiner
 # Load in WVs from alternate data set
-# Run 0020 - 1931-2023 + joiner
 # Run 0023 - 1931-1960 + joiner
 # Run 0025 - 1941-1970 + joiner
 # Run 0028 - 1951-1980 + joiner
+# Run 0030 - 1961-1990 + joiner
+# Run 0032 - 1971-2000 + joiner
+# Run 0037 - 1981-2010 + joiner
+# Run 0035 - 1991-2020 + joiner
 
 weeks &lt;- 54
 burnin &lt;- 80
